WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
288082
[GTK] REGRESSION(
290682@main
): Too few arguments for WebPageProxy::contextMenuItemSelected()
https://bugs.webkit.org/show_bug.cgi?id=288082
Summary
[GTK] REGRESSION(290682@main): Too few arguments for WebPageProxy::contextMen...
Claudio Saavedra
Reported
2025-02-20 04:21:26 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Claudio Saavedra
Comment 1
2025-02-20 04:21:56 PST
Pull request:
https://github.com/WebKit/WebKit/pull/40965
EWS
Comment 2
2025-02-20 04:33:20 PST
Committed
290698@main
(5a5fbdeb6405): <
https://commits.webkit.org/290698@main
> Reviewed commits have been landed. Closing PR #40965 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug