[GTK] REGRESSION(290682@main): Too few arguments for WebPageProxy::contextMenuItemSelected() https://bugs.webkit.org/show_bug.cgi?id=288082

Reviewed by Carlos Garcia Campos.

* Source/WebKit/UIProcess/API/gtk/PageClientImpl.cpp:
(WebKit::PageClientImpl::createContextMenuProxy):
* Source/WebKit/UIProcess/gtk/WebContextMenuProxyGtk.cpp:
(WebKit::contextMenuItemActivatedCallback):
(WebKit::WebContextMenuProxyGtk::append):
(WebKit::WebContextMenuProxyGtk::WebContextMenuProxyGtk):
* Source/WebKit/UIProcess/gtk/WebContextMenuProxyGtk.h:

Canonical link: https://commits.webkit.org/290698@main